--- a/7-to-do-list/style.css
+++ b/7-to-do-list/style.css
@@ -9,18 +9,16 @@
 body {
     height: 100vh;
     background: #066acd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
     width: 40%;
-    top: 50%;
-    left: 50%;
     background: white;
     border-radius: 10px;
     min-width: 450px;
-    position: absolute;
-    min-height: 100px;
-    transform: translate(-50%, -50%);
 }
 
 #newtask {
@@ -107,4 +105,5 @@ body {
 
 .task-text {
     all: unset;
+    width: 65%;
 }
